--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@ pagination:
   enabled: true
 ---
 <!-- The main content area -->
-
 <div class="posts">
   <div class="grid-xlarge">
+    <div class="posts__container" itemscope itemtype="http://schema.org/Blog" data-columns>
 
-    ???????????????????????????????????
-    <div>
-      
+      {% for post in site.posts %}
 
-      {% for post in paginator.posts %}
         <!-- The tag below includes the markup for each post - partials/post-card.html -->
         {% include post-card.html %}
 
@@ -20,4 +17,5 @@ pagination:
     </div>
   </div>
 
+  {% include pagination.html %}
 </div>
