커스텀 테스트

--- a/style-guide.html
+++ b/style-guide.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Style Guide
+title: About
 image: /assets/images/placeholder-18.jpg
 ---
 <p>My name is Thomas Vaeth and this is Barber. 💈 Barber is a minimal blog theme with a masonry grid layout and infinite scroll. <a href="http://samesies.io" target="_blank">Samesies</a> builds themes for Ghost, WordPress, and Jekyll and they are only available through ThemeForest.</p>
@@ -72,3 +72,9 @@ code {
 <hr/>
 
 <p>American apparel jean shorts terry richardson squid. Letterpress tattooed cray beard pinterest. Jean shorts tofu wayfarers, fap PBR swag banh mi. Organic chillwave scenester wayfarers semiotics salvia messenger bag, vice odd future.</p>
+
+<script type="text/javascript">
+  $( document ).ready(function() {
+      $('.header__list li:last-child').addClass("active");
+  });
+</script>
