--- a/about.html
+++ b/about.html
@@ -1,7 +1,13 @@
 ---
 layout: page
 title: About
-image: /assets/images/placeholder-18.jpg
 ---
 
-소개
+<div class="m01">
+  <p>(01)</p>
+  <p>muramoto meguru.</p>
+  <p>(02)</p>
+  <p>B. 1994 <br>I'm web designer based in Tokyo , Japan. <br>Awwwards Young Judge 2019. </p>
+  <p>(03)</p>
+  <p>Thank you for visiting this site. <br>I started this work 4 years ago. <br>I’m working for a creative production team. <br>thank you for reading. </p>
+</div>
