포스트 추가

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ layout: page
 ---
 <div class="about">
 	<h2> Hi, you found me!</h2>
-	<h2>I am Eunji, a product designer based in Seoul.</h2>
+	<h2>I am Eunji, a product designer based in Seoul 🤟</h2>
 	<br>
 	<br>
 
