포스트 추가

--- a/about.html
+++ b/about.html
@@ -4,11 +4,9 @@ layout: page
 
 ---
 <div class="about">
-	<h2> Hi, you found me!</h2>
-	<h2>I am Eunji, a product designer based in Seoul 🤟</h2>
+	<h2> Hi, you found me!<br>
+	I am Eunji, a product designer based in Seoul 🤟</h2>
 	<br>
-	<br>
-
 
 	<p> 
 		Hey, there. I'm Eunji jeong, a Visual Interaction Designer based in Korea. I have been designing digital solution for the last six years and collaborating with multi-disciplinary groups to solve complex problems and create intuitive experiences.
