포스트 추가

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ pagination:
 <!-- The main content area -->
 <div class="intro">
   Crafting digital experiences that <br>
-  help the People.
+  help user.
 </div>
 <div class="posts">
   <div class="grid-xlarge">
