--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 ---
 
 layout: page
+title: about
 
 ---
+<!-- 자기 소개 내용 추가 -->
 <div class="about">
 	<h2> Hi, you found me!<br>
 	I am Eunji, a product designer based in Seoul 🤟</h2>
@@ -18,8 +20,9 @@ layout: page
 
 
 
-<script type="text/javascript">
+<!-- jquery로 네비게이션에 현재 위치 표시 -->
+<!-- <script type="text/javascript">
   $( document ).ready(function() {
       $('.header__list li:last-child').addClass("active");
   });
-</script>
+</script> -->
