--- a/index.html
+++ b/index.html
@@ -4,28 +4,30 @@ pagination:
   enabled: true
 ---
 <!-- The main content area -->
-<div class="intro">
+
+<!-- 인트로 문구 추가 -->
+<!-- <div class="intro">
   Crafting digital experiences that <br>
   help user.
-</div>
+</div> -->
+
 <div class="posts">
   <div class="grid-xlarge">
     <div class="posts__container" itemscope itemtype="http://schema.org/Blog" data-columns>
 
       {% for post in site.posts %}
-
-        <!-- The tag below includes the markup for each post - partials/post-card.html -->
         {% include post-card.html %}
-
       {% endfor %}
+      
     </div>
   </div>
 
   {% include pagination.html %}
 </div>
 
-<script type="text/javascript">
+<!-- jquery로 네비게이션에 현재 위치 표시 -->
+<!-- <script type="text/javascript">
   $( document ).ready(function() {
       $('.header__list li:first-child').addClass("active");
   });
-</script>
+</script> -->
